[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/player1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[node name="Player" type="Area2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="currentPlayerIndication" type="Sprite" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 0.211171, 0.211171 )
texture = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Player_body_exited"]
